--- a/sports-style.css
+++ b/sports-style.css
@@ -1,8 +1,9 @@
-h1{
+* {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
+
 header {
     background-color: rgb(255, 255, 255);
     padding-right: 3%;
@@ -10,67 +11,89 @@ header {
     top: 0;
     z-index: 1;
     font-family:sans-serif;
+    
 }
+
 .logo {
-    width: 15%;
+    width: 10%;
     height: auto;
-    padding-top: 3%;
-    padding-bottom: 1%;
+    
 }
+
 header > a {
     list-style: none;
     display: block;
-    color: rgba(21, 42, 86, 0.9);
+    color: #CB6CE6;
     float: right;
     margin-right: 25px;
     font-size: larger;
     text-decoration: none;
-    padding-top: 1%;
+    padding-top: 4%;
     padding-bottom: 1%;
     margin: 1em;
     row-gap: 10%;
+    
 }
+
 a:hover {
-    color: rgb(255, 255, 255);
+    color: #152A56; 
 }
+
 .slogan {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 1.5em;
     padding: 5%;
-    color: rgba(21, 42, 86, 0.9);
+    color:  #CB6CE6;
     font-family:sans-serif;
+
 }
+
+
+
 .image-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 0.5%;
+    
 }
+
 .image-container img {
     width: 22em;
     height: auto;
     display: block;
+    transition: transform 0.3s ease;
 }
+
+.image-container img:hover {
+    transform: scale(1.1);
+}
+
 .main-discripton {
     text-align: left;
     padding: 3%;
-    color: rgba(21, 42, 86, 0.9);
+    color:  #152A56;
     padding-top: 10%;
     padding-bottom: 10%;
     font-family: sans-serif;
     margin: 1em;
+    
 }
+
 .main-discripton > h2 {
     font-size: 4em;
 }
+
 .main-discripton > p {
     text-align: center;
     padding-top: 2%;
     font-size: 150%;
 }
+
+
 .second-discripton {
     text-align: center;
     padding: 3%;
-    color: rgba(21, 42, 86, 0.9);
+    color:  #CB6CE6;
     padding-top: 8%;
     padding-bottom: 8%;
     font-size: 150%;
@@ -78,18 +101,24 @@ a:hover {
     margin-left: 5%;
     margin-right: 5%;
 }
+
+
 footer {
-    padding-top: 5%;
+    padding-top: 3%;
     padding-bottom: 2%;
     background-color: #152A56;
     text-align: center;
 }
+
 footer > a {
     color:#fff;
     row-gap: 10%;
 }
+
+
 footer :hover {
-    color: black;
+    color: #CB6CE6;
+
 }
 .sport-image-container img {
     width: 30em;
@@ -97,7 +126,7 @@ footer :hover {
 }
 .quote {
     padding-top: 5%;
-    color: rgba(21, 42, 86, 0.9);
+    color: #CB6CE6;
     text-align: center;
     font-style: italic;
 }
